--- a/app/src/main/res/layout/dialog_playlist.xml
+++ b/app/src/main/res/layout/dialog_playlist.xml
@@ -15,5 +15,16 @@
         android:layout_height="wrap_content"
         android:hint="@string/create_playlist_create_text_prompt"
         android:inputType="textCapWords"/>
+           <TextView
+                android:id="@+id/root6819playlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textSize="14sp"
+                tools:text="this is playlist??" />
 
 </FrameLayout>
