--- a/app/src/main/res/layout/dialog_playlist.xml
+++ b/app/src/main/res/layout/dialog_playlist.xml
@@ -25,6 +25,6 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:textSize="14sp"
-                tools:text="this is playlist??" />
+                tools:text="this is playlist" />
 
 </FrameLayout>
