--- a/app/src/main/res/layout/dialog_playlist.xml
+++ b/app/src/main/res/layout/dialog_playlist.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/create_playlist_create_text_prompt"
         android:inputType="textCapWords"/>
-           <TextView
+           <!-- <TextView
                 android:id="@+id/root6819playlist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,6 +25,6 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:textSize="14sp"
-                tools:text="this is playlist" />
+                tools:text="this is playlist" /> -->
 
 </FrameLayout>
